# missions-systems

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  backend.Dockerfile  compose.yaml  exp_table.csv  frontend.Dockerfile  nginx.Dockerfile  server.Dockerfile
app_server/: Cargo.toml
app_server/src/: error.rs  main.rs  router.rs
app_server/src/handlers/: auth.rs  combine.rs  daily_mission.rs  exp.rs  mod.rs  user.rs
app_server/src/types/: jwt.rs  mod.rs  token_warper.rs  update_user.rs
application/: package-lock.json  package.json
application/src/api/: baseURL.ts  createMissionApi.ts  deleteMissionApi.ts  deleteUserApi.ts  getMissionApi.ts  levelApi.ts  loginApiHandler.ts  missionCompleteApi.ts  signupApi.ts  updateMissionApi.ts  updateUserApi.ts  userInfoApi.ts
application/src/app/: globals.css  page.tsx
application/src/components/: AddMission.tsx  App.tsx  EditModal.tsx  Header.tsx  Login.tsx  Mission.tsx  MissionsList.tsx  MyPage.tsx  Selector.tsx  Signup.tsx  Status.tsx
application/src/styles/: AddMission.module.css  App.module.css  EditModal.module.css  (+7 more)
domain/: Cargo.toml
infrastructure/: Cargo.toml
infrastructure/src/repository/: daily_mission_repository_impl.rs  mod.rs  user_exp_repository_impl.rs  user_repository_impl.rs
infrastructure/src/service/: level_convert_impl.rs  mod.rs  password_hash_service_impl.rs  token_service_impl.rs  uuid_service_impl.rs
migrations/: 20241220143229_1.sql
mission_resetter/: Cargo.toml
mission_resetter/src/: main.rs  sql.rs  task.rs  time.rs
nginx/: nginx.conf
(+47 files in other folders)
