[package]
name = "app_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie"] }
dotenvy ={ workspace = true }
tokio = { version = "1.42.0", features = ["full"] }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
sqlx ={ workspace = true }
serde = { workspace = true }
cookie = "0.18.1"
chrono = "0.4.39"
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.2.0"
