[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.83"
base64 = "0.22.1"
csv = "1.3.1"
domain = { path = "../domain" }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { workspace = true }
sqlx ={ workspace = true }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
